Fixed height of navbar on index on tablet view

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -163,7 +163,6 @@ footer {
   background: #fff;
   margin-bottom: 1rem;
   width: 100%;
-  margin-top: 10rem;
 }
 
 footer a {
